# esc

./: .env.example  .gitignore  BUILD.md  CLAUDE.md  DOCKER_SETUP_SUMMARY.md  ELECTRON-PACKAGING-PLAN.md  Makefile  PLATE_SOLVE_SYNC.md  README-GHCR.md  README.Docker.md  README.md  TEST_COVERAGE_PLAN.md  TODO.md  build.bat  build.sh  docker-compose.ghcr.yml  docker-compose.prod.yml  docker-compose.webrtc.yml  docker-compose.yml  mediamtx.yml  nginx.conf  package.json  release-notes.md  setup-and-run.sh  test-webrtc-integration.md  test-webrtc.html
.github/: dependabot.yml
architecture/: README.md  webrtc-test-results.md
electron/: .env.development  .gitignore  README.md  main.js  package.json  pnpm-lock.yaml  preload.js  processManager.js
scripts/: generate-version.js  test-mediamtx.sh
server/: .dockerignore  .gitignore  Dockerfile  Dockerfile.multistage  Dockerfile.optimized  EVENT_COMPLETION_DOCS.md  NOTES.org  README_sky_tiles.md  README_test_utilities.md  add_debug_endpoint.py  check_websocket_attrs.py  database.py  debug_astrometry.py  debug_manager_state.py  debug_registration.py  debug_websocket_state.py  dummy_video_track.py  example_usage_event_completion.py  fits_metadata.json  main.py  main.spec  panorama_generator.py  pregenerate_sky_tiles.py  pyproject.toml  remote_websocket_client.py  requirements.txt  start_with_restart.sh  telescopes.db  test_event_completion.py  test_form_data.py  test_manual_registration.py  test_message_parsing.py  test_plate_solve.py  test_remote_websocket.py  test_status_updates.py  test_telescope_control.py  test_timeout_demo.py  test_timeout_functionality.py  test_timeout_simple.py  test_webrtc_simple.py  (+7 more)
server/api/routers/: catalog.py  processing.py  skymap.py  system.py
server/cli/: ui.py
server/data/catalogs/: catalog_processor.py  catalogs_index.json
server/data/catalogs/astro_data/: bright_stars.json  messier_objects.json
server/docs/: RESTART.md
server/graxpert/: README.md  ai_model_handling.py
server/services/: astrometry_client.py  async_image_processing.py  version_check.py
server/smarttel/imaging/: fits_handler.py  graxpert_stretch.py  image_processor.py  upscaler.py
server/smarttel/seestar/: __init__.py  client.py  connection.py  imaging_client.py  protocol_handlers.py  rtspclient.py
server/smarttel/seestar/commands/: common.py  discovery.py  imaging.py  parameterized.py  planner.py  responses.py  settings.py  simple.py
server/smarttel/seestar/events/: __init__.py
server/smarttel/seestar/plans/: __init__.py
server/smarttel/util/: __init__.py  asyncproxy.py  eventbus.py
server/tests/: test_command_error_conversion.py  test_controller_async_methods.py  test_controller_endpoints.py  test_controller_runner.py  test_database.py  test_database_comprehensive.py  test_main_api.py  test_main_endpoints.py  test_remote_websocket_client.py  test_seestar_client.py  test_seestar_integration.py  test_websocket_commands.py  test_websocket_components.py  test_websocket_manager.py  test_websocket_router.py
ui/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.multistage  Dockerfile.prod  README.md  TESTING_PLAN.md  TODO.md  build-info.json  jest.config.js  package.json  (+9 more)
(+314 files in other folders)
