[project]
name = "smarttel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.0",
    "fastapi>=0.115.12",
    "fastapi-restful[all]>=0.6.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "netifaces>=0.11.0",
    "numpy>=2.3.0",
    "pydantic>=2.11.4",
    "pydash>=8.0.5",
    "textual-dev>=1.7.0",
    "textual[syntax]>=3.2.0",
    "uvicorn>=0.34.3",
]
