[project]
name = "smarttel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "async-timeout>=5.0.1",
    "beartype>=0.21.0",
    "click>=8.2.0",
    "fastapi>=0.115.12",
    "fastapi-restful[all]>=0.6.0",
    "httpx[brotli,http2,zstd]>=0.28.1",
    "loguru>=0.7.3",
    "netifaces>=0.11.0",
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.11.4",
    "pydash>=8.0.5",
    "scikit-image>=0.25.2",
    "uvicorn>=0.34.3",
]
